chore(dependencies): update package versions in package.json and pnpm-lock.yaml
- Upgraded `next` from 16.0.1 to 16.0.3 for improved performance and features.
- Updated `react-hook-form` from 7.66.0 to 7.66.1 for bug fixes.
- Bumped `recharts` from 3.3.0 to 3.4.1 for new chart features.
- Increased `resend` version from 6.4.2 to 6.5.0 for enhancements.
- Updated various `@types` packages and other dependencies to their latest versions for better type safety and compatibility.
- Adjusted `@biomejs/biome` and `@next/bundle-analyzer` to their latest versions for improved functionality.
- Ensured all dependencies are aligned with the latest stable releases to maintain project stability and performance.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,15 +102,15 @@
     "lucide-react": "^0.554.0",
     "mem0ai": "^2.1.38",
     "nanoid": "^5.1.6",
-    "next": "16.0.1",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.66.0",
+    "react-hook-form": "^7.66.1",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "^3.3.0",
-    "resend": "^6.4.2",
+    "recharts": "^3.4.1",
+    "resend": "^6.5.0",
     "streamdown": "^1.4.0",
     "stripe": "^19.3.0",
     "tailwind-merge": "^3.3.1",
@@ -122,8 +122,8 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.4",
-    "@next/bundle-analyzer": "^16.0.1",
+    "@biomejs/biome": "^2.3.6",
+    "@next/bundle-analyzer": "^16.0.3",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
@@ -132,22 +132,22 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
-    "@types/node": "24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "@vitest/coverage-v8": "^4.0.8",
-    "@vitest/ui": "^4.0.8",
+    "@types/node": "24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/coverage-v8": "^4.0.10",
+    "@vitest/ui": "^4.0.10",
     "babel-plugin-react-compiler": "^1.0.0",
-    "jose": "^6.1.1",
+    "jose": "^6.1.2",
     "jscodeshift": "^17.3.0",
-    "jsdom": "^27.1.0",
+    "jsdom": "^27.2.0",
     "jsondiffpatch": "^0.7.3",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.10"
   },
   "engines": {
     "node": "^24 || >=24",
