--- a/frontend/package.json
+++ b/frontend/package.json
@@ -99,6 +99,7 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "js-tiktoken": "^1.0.21",
+    "libphonenumber-js": "^1.12.27",
     "lucide-react": "^0.554.0",
     "mem0ai": "^2.1.38",
     "nanoid": "^5.1.6",
