refactor: update environment configuration and import paths
- Simplified the `.env.example` and `.env.test.example` files, consolidating environment variables for easier setup and clarity.
- Introduced a new `env-setup.md` guide for local development, detailing required environment variables and setup instructions.
- Established import path standards in `import-paths.md`, promoting consistent usage of semantic aliases across the codebase.
- Updated various documentation files to reflect changes in import paths and environment setup, ensuring clarity for developers.
- Refactored code to utilize new import paths, enhancing maintainability and organization.

--- a/.env.example
+++ b/.env.example
@@ -1,376 +1,104 @@
-# TripSage Environment Configuration Template
-# Copy this file to .env and update with your actual values
-
-# =============================================================================
-# CORE APPLICATION SETTINGS
-# =============================================================================
-
-# Environment: development, production, test, testing
-ENVIRONMENT=development
-
-# Debug mode (true/false)
-DEBUG=false
-
-# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
-LOG_LEVEL=INFO
-
-# Application secret key for encryption and signing (keep secret!)
-SECRET_KEY=your-application-secret-key-here
-
-# =============================================================================
-# API SERVER CONFIGURATION
-# =============================================================================
-
-# API server host
-TRIPSAGE_API_HOST=127.0.0.1
-
-# API server port
-TRIPSAGE_API_PORT=8080
-
-# API server reload in development (true/false)
-TRIPSAGE_API_RELOAD=true
-
-# API metadata
-API_TITLE=TripSage API
-API_VERSION=1.0.0
-# CORS settings
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001
-CORS_CREDENTIALS=true
-
-# =============================================================================
-# DATABASE CONFIGURATION (Supabase)
-# =============================================================================
-
-# Supabase project URL
-DATABASE_URL=https://your-project.supabase.co
-
-# Supabase service role key (keep secret!)
-DATABASE_SERVICE_KEY=your_service_role_key_here
-
-# Supabase public anon key
-DATABASE_PUBLIC_KEY=your_anon_key_here
-
-# Supabase JWT secret (keep secret!)
-DATABASE_JWT_SECRET=your_jwt_secret_here
-
-# PostgreSQL connection URL (optional, overrides Supabase URL if provided)
-POSTGRES_URL=postgresql://postgres:your-password@aws-0-your-region.pooler.supabase.com:6543/postgres
-
-# Alternative database URL for scripts/tools
-# Optional scripts/tools override (not used by server runtime)
-# SUPABASE_DB_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
-
-# =============================================================================
-# CACHE/REDIS CONFIGURATION
-# =============================================================================
-
-# Redis connection URL
-REDIS_URL=redis://localhost:6379/0
-
-# Redis password (if authentication enabled)
-REDIS_PASSWORD=your_redis_password_here
-
-# Maximum concurrent connections
-REDIS_MAX_CONNECTIONS=50
-
-# Upstash Redis REST URL (preferred for Vercel deployments)
-UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
-
-# Upstash Redis REST token
-UPSTASH_REDIS_REST_TOKEN=your_upstash_token_here
-
-# =============================================================================
-# AI/LLM CONFIGURATION
-# =============================================================================
-
-# OpenAI API key (required)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Default OpenAI model
-OPENAI_MODEL=gpt-5-mini
-
-# Default temperature for AI models
-MODEL_TEMPERATURE=0.7
-
-# Vercel AI Gateway API key (optional, for unified routing and observability)
-# When set, routes all provider requests through Vercel AI Gateway
-AI_GATEWAY_API_KEY=
-
-# Vercel AI Gateway base URL (optional, defaults to https://ai-gateway.vercel.sh/v1)
-AI_GATEWAY_URL=
-
-# OpenRouter API key (server-side fallback, separate from attribution headers)
-OPENROUTER_API_KEY=
-
-# xAI API key (server-side fallback)
-XAI_API_KEY=
-
-
-# =============================================================================
-# LANGGRAPH ORCHESTRATION CONFIGURATION
-# =============================================================================
-
-# Default model for LangGraph
-LANGGRAPH_DEFAULT_MODEL=gpt-5
-
-# Temperature for LangGraph operations
-LANGGRAPH_TEMPERATURE=0.7
-
-# Max tokens for LangGraph
-LANGGRAPH_MAX_TOKENS=4096
-
-# Router model for LangGraph
-LANGGRAPH_ROUTER_MODEL=gpt-5-mini
-
-# Router temperature
-LANGGRAPH_ROUTER_TEMPERATURE=0.1
-
-# Checkpoint storage type (memory, postgres, etc.)
-LANGGRAPH_CHECKPOINT_STORAGE=memory
-
-# Checkpoint connection string (for postgres storage)
-LANGGRAPH_CHECKPOINT_CONNECTION=
-
-# Max retries for LangGraph operations
-LANGGRAPH_MAX_RETRIES=3
-
-# Retry delay in seconds
-LANGGRAPH_RETRY_DELAY=1.0
-
-# Escalation threshold
-LANGGRAPH_ESCALATION_THRESHOLD=5
-
-# Timeout for operations
-LANGGRAPH_TIMEOUT_SECONDS=30
-
-# LangSmith project name
-LANGSMITH_PROJECT=tripsage-langgraph
-
-# LangSmith API key
-LANGSMITH_API_KEY=
-
-# Enable parallel execution
-LANGGRAPH_PARALLEL_EXECUTION=true
-
-# Max concurrent tools
-LANGGRAPH_MAX_CONCURRENT_TOOLS=5
-
-# Tool timeout
-LANGGRAPH_TOOL_TIMEOUT_SECONDS=10
-
-# Session timeout in hours
-LANGGRAPH_SESSION_TIMEOUT_HOURS=24
-
-# Max message history
-LANGGRAPH_MAX_MESSAGE_HISTORY=100
-
-# LangGraph feature flags (comma-separated: conversation_memory,human_in_loop,advanced_routing,memory_updates,error_recovery,langsmith)
-LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_recovery,langsmith
-
-# =============================================================================
-# RATE LIMITING CONFIGURATION
-# =============================================================================
-
-# Enable rate limiting
-RATE_LIMIT_ENABLED=true
-
-# Default requests per minute
-RATE_LIMIT_REQUESTS_PER_MINUTE=60
-
-# Default requests per hour
-RATE_LIMIT_REQUESTS_PER_HOUR=1000
-
-# Default requests per day
-RATE_LIMIT_REQUESTS_PER_DAY=10000
-
-# Default burst size
-RATE_LIMIT_BURST_SIZE=10
-
-# Rate limiting strategy (comma-separated: sliding_window,token_bucket,burst_protection)
-RATE_LIMIT_STRATEGY=sliding_window,token_bucket,burst_protection
-
-RATE_LIMIT_ENABLE_MONITORING=true
-
-# Note: Backend uses REDIS_URL (TCP/TLS). Upstash REST is for frontend/edge.
-
-# =============================================================================
-# MONITORING AND OBSERVABILITY
-# =============================================================================
-
-# Enable database monitoring
-ENABLE_DATABASE_MONITORING=true
-
-# Enable security monitoring
-ENABLE_SECURITY_MONITORING=true
-
-# Enable auto recovery
-ENABLE_AUTO_RECOVERY=true
-
-# Database health check interval
-DB_HEALTH_CHECK_INTERVAL=30.0
-
-# Database security check interval
-DB_SECURITY_CHECK_INTERVAL=60.0
-
-# Max recovery attempts
-DB_MAX_RECOVERY_ATTEMPTS=3
-
-# Recovery delay
-DB_RECOVERY_DELAY=5.0
-
-# OpenTelemetry endpoint
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
-
-# OpenTelemetry protocol
-OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
-
-# Hostname for instance identification
-HOSTNAME=local
-
-# Custom duration histogram buckets
-TRIPSAGE_DURATION_BUCKETS=0.005,0.01,0.025,0.05,0.1,0.25,0.5,1,2.5,5,10
-
-# OTEL instrumentation (comma-separated: fastapi,asgi,httpx,redis)
-OTEL_INSTRUMENTATION=
-
-# =============================================================================
-# EXTERNAL API CONFIGURATION
-# =============================================================================
-
-# Google Maps Platform API keys
-# Server-side key (required for server routes like /api/geocode).
-# Must be IP- and API-restricted (Geocoding/Places/Routes/Time Zone) per GMP policy.
-GOOGLE_MAPS_SERVER_API_KEY=your_google_maps_server_api_key_here
-
-# Browser key (optional; used by Map/Places autocomplete client components).
-# Must be HTTP referrer-restricted to Maps JavaScript API only.
-NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=your_google_maps_browser_api_key_here
-
-# Google Maps timeout
-GOOGLE_MAPS_TIMEOUT=10.0
-
-# Google Maps retry timeout
-GOOGLE_MAPS_RETRY_TIMEOUT=60
-
-# Google Maps QPS throttle
-GOOGLE_MAPS_QUERIES_PER_SECOND=10
-
-# Duffel API token
-DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
-# Duffel API key (fallback, prefer DUFFEL_ACCESS_TOKEN above)
-DUFFEL_API_KEY=
-
-
-# Google Calendar credentials file path
-GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
-
-# Google Calendar token file path
-GOOGLE_CALENDAR_TOKEN_FILE=token.json
-
-# =============================================================================
-# FRONTEND (NEXT.JS) CONFIGURATION
-# =============================================================================
-
-# Supabase (frontend SSR and client)
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-# Optional: base path for Next.js deployment (e.g., "/tripsage")
-NEXT_PUBLIC_BASE_PATH=
-
-# =============================================================================
-# MCP TOOL CONFIGURATION
-# =============================================================================
-
-# Crawl4AI MCP API key
-CRAWL4AI_MCP__API_KEY=
-
-# Crawl4AI MCP endpoint
-CRAWL4AI_MCP__ENDPOINT=http://localhost:11235
-
-# Crawl4AI MCP timeout
-CRAWL4AI_MCP__TIMEOUT=30.0
-
-# Weather APIs
-OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
-
-# Web Crawling
-WEBCRAWL_MCP_ENDPOINT=http://localhost:3001
-FIRECRAWL_API_KEY=your_firecrawl_api_key_here
-# Optional (self-hosters only): override Firecrawl API base URL
-# Default is https://api.firecrawl.dev/v2 and works for most users.
-# FIRECRAWL_BASE_URL=
-
-# Browser Automation
-PLAYWRIGHT_MCP_ENDPOINT=http://localhost:3004
-BROWSER_MCP_ENDPOINT=http://localhost:3002
-
-# Travel APIs
-FLIGHTS_MCP_ENDPOINT=http://localhost:3003
-# OpenTripMap API key (optional, for POI lookups)
-# Get your key at https://opentripmap.io/docs
-OPENTRIPMAP_API_KEY=
-
-# GeoSure/Travel Advisory API key (optional, for safety scores)
-GEOSURE_API_KEY=
-
-# Accommodation search endpoints (optional, for Airbnb MCP or custom accommodation service)
-ACCOM_SEARCH_URL=
-ACCOM_SEARCH_TOKEN=
-# Alternative names (for backward compatibility)
-AIRBNB_MCP_URL=
-AIRBNB_MCP_API_KEY=
-
-
-# Memory and Calendar
-MEMORY_MCP_ENDPOINT=http://localhost:3008
-CALENDAR_MCP_ENDPOINT=http://localhost:3010
-
-# =============================================================================
-# FRONTEND/BACKEND COMMUNICATION
-# =============================================================================
-
-# Backend API URL for frontend
-BACKEND_API_URL=http://localhost:8080
-
-# Frontend API URL configuration
-NEXT_PUBLIC_API_URL=http://localhost:8080
-
-# WebSocket URL (derived from API URL if not specified)
-NEXT_PUBLIC_WS_URL=ws://localhost:8080
-
-# Base path for frontend (for subfolder deployments)
-NEXT_PUBLIC_BASE_PATH=
-
-# =============================================================================
-# FRONTEND PUBLIC CONFIGURATION
-# =============================================================================
-
-# Supabase public configuration (required for frontend)
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-# App branding
-NEXT_PUBLIC_APP_NAME=TripSage
-
-# Node environment
+# TripSage Next.js + AI SDK v6 environment template (server-first)
+# Replace placeholder values with your own secrets before running locally or deploying.
+
+# ---------------------------------------------------------------------------
+# Core URLs
+# ---------------------------------------------------------------------------
 NODE_ENV=development
+CI=false
+PORT=3000
+APP_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME=TripSage
+NEXT_PUBLIC_BASE_PATH=
+NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
-# =============================================================================
-# DEVELOPMENT AND DEBUGGING (DEVELOPMENT ONLY)
-# =============================================================================
+# ---------------------------------------------------------------------------
+# Supabase
+# ---------------------------------------------------------------------------
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_JWT_SECRET=dev-jwt-secret
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 
-# Enable verbose logging (development only)
-VERBOSE_LOGGING=false
+# ---------------------------------------------------------------------------
+# Upstash / QStash (HTTP-only)
+# ---------------------------------------------------------------------------
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-upstash-token
+QSTASH_TOKEN=your-qstash-token
+QSTASH_CURRENT_SIGNING_KEY=your-qstash-current-signing-key
+QSTASH_NEXT_SIGNING_KEY=your-qstash-next-signing-key
 
-# Mock external APIs in development
-MOCK_EXTERNAL_APIS=false
+# ---------------------------------------------------------------------------
+# AI providers / gateway
+# ---------------------------------------------------------------------------
+AI_GATEWAY_API_KEY=
+AI_GATEWAY_URL=https://ai-gateway.vercel.sh/v1
+OPENAI_API_KEY=
+OPENROUTER_API_KEY=
+ANTHROPIC_API_KEY=
+XAI_API_KEY=
+EMBEDDINGS_API_KEY=
 
-# Seed database in development
-SEED_DATABASE=false
+# ---------------------------------------------------------------------------
+# Search / crawling
+# ---------------------------------------------------------------------------
+FIRECRAWL_API_KEY=
+FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 
-# Disable validation in development
-DISABLE_VALIDATION=false
+# ---------------------------------------------------------------------------
+# Maps / weather
+# ---------------------------------------------------------------------------
+GOOGLE_MAPS_SERVER_API_KEY=
+NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=
+OPENWEATHERMAP_API_KEY=
 
-# Analyze bundle in development
+# ---------------------------------------------------------------------------
+# Payments
+# ---------------------------------------------------------------------------
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+
+# ---------------------------------------------------------------------------
+# Email / notifications
+# ---------------------------------------------------------------------------
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=noreply@example.com
+RESEND_FROM_NAME=TripSage
+COLLAB_WEBHOOK_URL=
+HMAC_SECRET=
+MEM0_API_KEY=
+
+# ---------------------------------------------------------------------------
+# Travel APIs
+# ---------------------------------------------------------------------------
+DUFFEL_ACCESS_TOKEN=
+DUFFEL_API_KEY=
+EPS_API_KEY=
+EPS_API_SECRET=
+EPS_BASE_URL=https://api.ean.com/2/rapid
+EPS_DEFAULT_CUSTOMER_IP=0.0.0.0
+EPS_DEFAULT_USER_AGENT=TripSage/1.0 (+https://tripsage.ai)
+
+# ---------------------------------------------------------------------------
+# Analytics (optional)
+# ---------------------------------------------------------------------------
+GOOGLE_ANALYTICS_ID=
+MIXPANEL_TOKEN=
+POSTHOG_HOST=https://app.posthog.com
+POSTHOG_KEY=
+
+# ---------------------------------------------------------------------------
+# App integration
+# ---------------------------------------------------------------------------
+BACKEND_API_URL=http://localhost:8001
+
+# ---------------------------------------------------------------------------
+# Flags
+# ---------------------------------------------------------------------------
 ANALYZE=false
+DEBUG=false
