refactor: update provider registry and enhance accommodation booking flow
- Replaced legacy provider registry imports with new paths from `@ai/models/registry`, ensuring consistency across the codebase.
- Introduced a new booking orchestrator for managing accommodation bookings, including approval, payment, and provider interactions.
- Enhanced testing coverage for the new booking orchestrator and related components, ensuring robust functionality and error handling.
- Updated existing tests to align with the new provider registry structure, improving maintainability and clarity.
- Removed outdated provider registry file to streamline the codebase.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
+    "ops": "tsx scripts/ops.ts",
     "boundary:check": "node ../scripts/check-boundaries.js",
     "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
     "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
