--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,9 +43,9 @@
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0-beta.54",
     "@ai-sdk/mcp": "1.0.0-beta.15",
-    "@ai-sdk/openai": "3.0.0-beta.60",
-    "@ai-sdk/react": "3.0.0-beta.99",
-    "@ai-sdk/xai": "3.0.0-beta.38",
+    "@ai-sdk/openai": "3.0.0-beta.63",
+    "@ai-sdk/react": "3.0.0-beta.105",
+    "@ai-sdk/xai": "3.0.0-beta.39",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@opentelemetry/api": "^1.9.0",
@@ -90,7 +90,8 @@
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.6",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.99",
+    "ai": "6.0.0-beta.105",
+    "amadeus": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -114,7 +115,7 @@
     "recharts": "^3.4.1",
     "resend": "^6.5.0",
     "streamdown": "^1.4.0",
-    "stripe": "^19.3.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
