--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -124,10 +124,10 @@ FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 DUFFEL_ACCESS_TOKEN=
 DUFFEL_API_KEY=
 
-# Expedia Partner Solutions (EPS) Rapid API
-EPS_API_KEY=
-EPS_API_SECRET=
-EPS_BASE_URL=
+# Amadeus Self-Service API
+AMADEUS_CLIENT_ID=
+AMADEUS_CLIENT_SECRET=
+AMADEUS_ENV=test
 
 # OpenWeatherMap API key (for weather data)
 OPENWEATHERMAP_API_KEY=
