--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
     "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
     "test:quick": "vitest run --reporter=dot",
-    "test:ci": "vitest run --pool=forks --maxWorkers=2 --no-file-parallelism --reporter=dot",
+    "test:ci": "vitest run --pool=threads --maxWorkers=2 --reporter=dot",
     "test:dev-fast": "vitest --pool=threads --maxWorkers=50% --reporter=default",
     "test:unit": "vitest run --project=unit",
     "test:components": "vitest run --project=component",
@@ -100,6 +100,7 @@
     "html-to-text": "^9.0.5",
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
+    "ical.js": "^2.2.1",
     "js-tiktoken": "^1.0.21",
     "libphonenumber-js": "^1.12.27",
     "lucide-react": "^0.554.0",
@@ -162,8 +163,6 @@
       "prismjs": ">=1.30.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": [
-      "esbuild"
-    ]
+    "ignoredBuiltDependencies": ["esbuild"]
   }
 }
