fix(tests): correct ESLint rule formatting and restore thread pool configuration
- Fixed the formatting of the ESLint rule for using `errorResponse()` in Next.js.
- Restored the thread pool configuration in Vitest for improved performance across test runs.
- Updated comments in test setup to clarify the usage of React Query and Supabase helpers.

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -16,8 +16,8 @@
     "no-restricted-syntax": [
       "error",
       {
-        "selector": "CallExpression[callee.object.name='NextResponse'][callee.property.name='json'][arguments.0.properties[*].key.name='error']",
-        "message": "Use errorResponse() from @/lib/next/route-helpers instead of inline NextResponse.json"
+        "message": "Use errorResponse() from @/lib/next/route-helpers instead of inline NextResponse.json",
+        "selector": "CallExpression[callee.object.name='NextResponse'][callee.property.name='json'][arguments.0.properties[*].key.name='error']"
       }
     ]
   }
