--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 SUPABASE_JWT_SECRET=dev-jwt-secret
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+SUPABASE_PROJECT_REF=your-project-ref
+LOCAL_SUPABASE_URL=http://localhost:54321
+LOCAL_ANON_KEY=your-local-anon-key
+LOCAL_SERVICE_ROLE_KEY=your-local-service-role-key
 
 # ---------------------------------------------------------------------------
 # Upstash / QStash (HTTP-only)
