--- a/.env.test.example
+++ b/.env.test.example
@@ -23,6 +23,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=anon-test-key
 SUPABASE_SERVICE_ROLE_KEY=service-role-test
 SUPABASE_JWT_SECRET=test-jwt-secret
 DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
+SUPABASE_PROJECT_REF=test-project-ref
+LOCAL_SUPABASE_URL=http://localhost:54321
+LOCAL_ANON_KEY=anon-test-key
+LOCAL_SERVICE_ROLE_KEY=service-role-test
 
 # ---------------------------------------------------------------------------
 # Upstash / QStash (HTTP-only)
