feat(env): enhance environment configuration and documentation
- Added GOOGLE_MAPS_API_KEY and AMADEUS_CLIENT_ID to .env.example for improved API integration.
- Updated .env.test.example with AMADEUS_CLIENT_ID, AMADEUS_CLIENT_SECRET, and AMADEUS_ENV for testing environments.
- Revised documentation to reflect the removal of the legacy Python/FastAPI backend, emphasizing the new Next.js 16 architecture.
- Clarified environment setup instructions to facilitate onboarding and configuration management.

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,7 @@ FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 # ---------------------------------------------------------------------------
 # Maps / weather
 # ---------------------------------------------------------------------------
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here # Shared Google Maps API key (server only)
 GOOGLE_MAPS_SERVER_API_KEY=
 NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=
 OPENWEATHERMAP_API_KEY=
@@ -80,6 +81,7 @@ MEM0_API_KEY=
 # ---------------------------------------------------------------------------
 # Travel APIs
 # ---------------------------------------------------------------------------
+AMADEUS_CLIENT_ID=your_amadeus_client_id_here # Amadeus API client ID for flight search
 DUFFEL_ACCESS_TOKEN=
 DUFFEL_API_KEY=
 EPS_API_KEY=
