--- a/.env.test.example
+++ b/.env.test.example
@@ -87,6 +87,9 @@ EPS_API_SECRET=test-eps-secret
 EPS_BASE_URL=https://api.ean.com/2/rapid
 EPS_DEFAULT_CUSTOMER_IP=0.0.0.0
 EPS_DEFAULT_USER_AGENT=TripSage/1.0 (+https://tripsage.ai)
+AMADEUS_CLIENT_ID=test-amadeus-client-id
+AMADEUS_CLIENT_SECRET=test-amadeus-client-secret
+AMADEUS_ENV=test
 
 # ---------------------------------------------------------------------------
 # Analytics (optional)
