feat(upstash): implement testing harness with shared mocks and emulators
- Introduced a comprehensive Upstash testing harness, including shared Redis and rate limit mocks for improved test reliability.
- Added optional emulator support for local testing, allowing developers to run tests against a simulated Upstash environment.
- Updated documentation to reflect new testing strategies and configurations, ensuring clarity for future contributors.
- Enhanced existing tests to utilize the new harness, promoting DRY principles and consistent test behavior across the codebase.

--- a/.env.test.example
+++ b/.env.test.example
@@ -36,6 +36,15 @@ UPSTASH_REDIS_REST_TOKEN=test-upstash-token
 QSTASH_TOKEN=test-qstash-token
 QSTASH_CURRENT_SIGNING_KEY=test-qstash-current
 QSTASH_NEXT_SIGNING_KEY=test-qstash-next
+# Optional: local emulator endpoints (used by test:upstash:int)
+#UPSTASH_USE_EMULATOR=1
+#UPSTASH_EMULATOR_URL=http://localhost:8079
+#UPSTASH_EMULATOR_TOKEN=test-emulator-token
+#UPSTASH_QSTASH_DEV_URL=http://localhost:8081
+#UPSTASH_QSTASH_DEV_TOKEN=test-qstash-dev-token
+
+# Optional: live smoke (used by test:upstash:smoke)
+#UPSTASH_SMOKE=1
 
 # ---------------------------------------------------------------------------
 # AI providers / gateway
