--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "test:components": "vitest run --project=component",
     "test:api": "vitest run --project=api",
     "test:integration": "vitest run --project=integration",
+    "test:upstash:unit": "vitest run src/test/upstash/**/*.ts src/**/__tests__/**/*upstash*.test.ts",
+    "test:upstash:int": "UPSTASH_USE_EMULATOR=1 vitest run --project=integration src/**/__tests__/**/*upstash-int*.test.ts",
+    "test:upstash:smoke": "UPSTASH_SMOKE=1 vitest run src/__tests__/contracts/upstash.smoke.test.ts",
     "test:changed": "vitest run --changed",
     "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
     "test:merge": "vitest run --merge-reports",
