feat(upstash): enhance testing harness and documentation
- Updated the Upstash testing harness to include improved shared mocks and emulators for Redis and rate limiting, ensuring better test reliability and thread safety.
- Refined the Upstash smoke tests to utilize environment variable checks and improved error handling for missing configurations.
- Enhanced documentation for the Upstash testing strategy, including detailed instructions for using the emulator and updated testing guidelines.
- Added new features to the rate limit mock, including retry-after handling, to better simulate real-world scenarios.
- Updated various test files to reflect changes in setup and ensure consistent behavior across tests.

--- a/.gitignore
+++ b/.gitignore
@@ -285,6 +285,7 @@ docs/prompts/tools/
 frontend/docs/prompts/
 docs/prompts/
 docs/review/
+docs/implementation/
 
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
